fix footer overflow

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -18,3 +18,6 @@ footer .input-group-text{
   padding-left: 2vw;
 }
 
+.fit-width{
+  width: 100%;
+}
